[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Items/Item.gd" type="Script" id=1]

[node name="Item" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PickUpEffect" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Item_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
